# klayer

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  capture-screenshots.js  marketplace.json  package-lock.json  take_screenshots.py
.github/workflows/: release.yml
crates/kl-code/: Cargo.toml
crates/kl-code/src/: indexing.rs  lang.rs  lib.rs  symbols.rs
crates/kl-core/: Cargo.toml
crates/kl-core/src/: lib.rs  redact.rs
crates/kl-ingest/: Cargo.toml
crates/kl-ingest/src/: lib.rs
crates/kl-mcp/: Cargo.toml
crates/kl-mcp/src/: bootstrap.rs  compliance.rs  dashboard.html  dashboard.rs  main.rs  marketplace.json  notify.rs  tui.rs
crates/kl-mcp/src/tools/: admin.rs  codebase.rs  knowledge.rs  media.rs  mod.rs  session.rs  training.rs
crates/kl-search/: Cargo.toml
crates/kl-search/src/: lib.rs
crates/kl-session/: Cargo.toml
crates/kl-session/src/: lib.rs
crates/kl-session/src/migrations/: 0001_init.sql
crates/kl-skill/: Cargo.toml
crates/kl-skill/src/: lib.rs
crates/kl-store/: Cargo.toml
crates/kl-store/src/: acl.rs  domains.rs  episodes.rs  knowledge.rs  lib.rs  media.rs  model_registry.rs  sources.rs
crates/kl-store/src/migrations/: 0001_init.sql  0002_journal_submissions.sql  0003_author.sql  0004_media.sql
crates/kl-train/: Cargo.toml
crates/kl-train/src/: lib.rs
crates/kl-train/src/migrations/: 0001_init.sql
klayer-skill/: SKILL.md  klayer.mdc
npm/klayer-mcp/: README.md  package.json
tests/: serve_fixtures.py
tests/fixtures/: sample.html  sample.json  sample.md  sample.txt
