[workspace]
resolver = "2"
members = [
    "crates/kl-core",
    "crates/kl-store",
    "crates/kl-ingest",
    "crates/kl-search",
    "crates/kl-skill",
    "crates/kl-code",
    "crates/kl-train",
    "crates/kl-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "net"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.21"
# rmcp 0.16 — official MCP Rust SDK. schemars/serde are re-exported via rmcp.
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }

# internal crates
kl-core   = { path = "crates/kl-core" }
kl-store  = { path = "crates/kl-store" }
kl-ingest = { path = "crates/kl-ingest" }
kl-search = { path = "crates/kl-search" }
kl-skill  = { path = "crates/kl-skill" }
kl-code   = { path = "crates/kl-code" }
kl-train  = { path = "crates/kl-train" }
