[package]
name = "kl-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "klayer"
path = "src/main.rs"

[features]
default = []
# Vector retrieval (sqlite-vec + local ONNX embeddings). Not wired in v0; the
# Embedder trait + chunks_vec table are the extension points. See README.
embed-local = []

[dependencies]
kl-core.workspace = true
kl-store.workspace = true
kl-ingest.workspace = true
kl-search.workspace = true
kl-skill.workspace = true
kl-code.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
axum.workspace = true
tower-http.workspace = true
