[package]
name = "kl-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "klayer"
path = "src/main.rs"

[features]
default = ["admin"]
# Vector retrieval (sqlite-vec + local ONNX embeddings). Not wired in v0; the
# Embedder trait + chunks_vec table are the extension points. See README.
embed-local = []
# Admin build: enables the marketplace submission review/approval workflow
# (approve/deny/import). Distributed user binaries are built WITHOUT this, so
# they can publish and manage their own domains but cannot approve submissions.
admin = []

[dependencies]
kl-core.workspace = true
kl-store.workspace = true
kl-ingest.workspace = true
kl-search.workspace = true
kl-code.workspace = true
kl-train.workspace = true
kl-session.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
axum.workspace = true
tower-http.workspace = true
printpdf.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["json"] }
rand.workspace = true
ratatui.workspace = true
crossterm.workspace = true
