[package]
name = "kl-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kl-core.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
zerocopy.workspace = true
